drrx/fixtures/invalid/invalid-root-files-order.tree.drrx
.                       # root
+-- src/                # directory before any root files (OR.01)
| :== main.py
+== README.md           # root file appears after directory (also OR.04)
